--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -19,7 +19,7 @@
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ News</a>
             </li>
           </ul>
         </li>
@@ -27,19 +27,16 @@
           <h2 class="uq-footer__navigation-title">Working with us</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
-            </li>
-            <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic Plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
+              <a href="https://uq.sharepoint.com/sites/staff" class="uq-footer__navigation-link">Staff Intranet</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-staff-it-support" class="uq-footer__navigation-link">IT support</a>
             </li>
           </ul>
         </li>
@@ -59,7 +56,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-staff-it-support" class="uq-footer__navigation-link">IT support</a>
             </li>
           </ul>
         </li>
@@ -116,7 +113,7 @@
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ News</a>
             </li>
           </ul>
         </li>
@@ -124,19 +121,16 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working with us</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
-            </li>
-            <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic Plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
+              <a href="https://uq.sharepoint.com/sites/staff" class="uq-footer__navigation-link">Staff Intranet</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-staff-it-support" class="uq-footer__navigation-link">IT support</a>
             </li>
           </ul>
         </li>
@@ -156,7 +150,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-staff-it-support" class="uq-footer__navigation-link">IT support</a>
             </li>
           </ul>
         </li>
